third_party/move/move-compiler-v2/tests/lambda/inline-parity/eval_ignored_param.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/eval_ignored_param.move:10:14
   │
10 │     let r = foo(|x, _, z| x*z, |_, y, _| y, 1, 10, 100, 1000);
   │                 ^^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/eval_ignored_param.move:10:29
   │
10 │     let r = foo(|x, _, z| x*z, |_, y, _| y, 1, 10, 100, 1000);
   │                                ^^^^^^^^^^^
